--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -1,8 +1,12 @@
 header
+  display: flex
+  justify-content: space-between
+  align-items: center
   height: 90px
+  padding: 0 30px
+
   .logo
-    float: left
-    margin: 30px
+    margin: 0
     font:
       size: 24px
       weight: 700
@@ -11,29 +15,32 @@ header
       color: rgba(0,0,0,1)
       &:hover
         color: $accent-color
+
   nav
-    float: right
-    margin: 30px 30px 0 0
+    margin: 0
     a
       display: inline-block
-      margin-left: 20px
+      margin-left: 15px
       color: rgba(0,0,0,1)
       font:
-        size: 24px
+        size: 22px
         weight: 700
       &:hover
         color: $accent-color
 
 @media (max-width: 768px)
   header
+    flex-direction: column
+    align-items: flex-start
+    padding: 10px 30px
+
     .logo
-      margin: 10px 30px 0px 0px
+      margin: 0 0 10px 0
+
     nav
-      margin: 0px
-      margin-top: 18px
-      float: left
+      margin: 0
       a
-        margin-left: 0px
+        margin-left: 0
         margin-right: 20px
         font:
           size: 16px
