--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -2,7 +2,7 @@ header
   display: flex
   justify-content: space-between
   align-items: center
-  height: 90px
+  height: 120px // Increase the header height to accommodate the larger logo
   padding: 0 30px
 
   .logo
@@ -10,7 +10,7 @@ header
     align-items: center
     margin: 0
     font:
-      size: 30px
+      size: 36px // Slightly increase the title font size for balance
       weight: 700
     a
       display: flex
@@ -21,15 +21,15 @@ header
         color: $accent-color
 
     .header-logo
-      width: 100px // Adjust size as needed for your SVG
+      width: 120px // Further increase the logo size
       height: auto
-      margin-right: 10px // Space between the logo image and the text
+      margin-right: 15px // Increase space between the logo image and the text
 
   nav
     margin: 0
     a
       display: inline-block
-      margin-left: 15px
+      margin-left: 20px // Increase space between navigation items for balance
       color: rgba(0,0,0,1)
       font:
         size: 22px
