Space above logo

--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -2,15 +2,15 @@ header
   display: flex
   justify-content: space-between
   align-items: center
-  height: 120px // Increase the header height to accommodate the larger logo
-  padding: 0 30px
+  height: 120px // Adjusted height to maintain balance
+  padding: 10px 30px // Added top padding to create space between the logo and the top of the page
 
   .logo
     display: flex
     align-items: center
     margin: 0
     font:
-      size: 36px // Slightly increase the title font size for balance
+      size: 36px
       weight: 700
     a
       display: flex
@@ -21,15 +21,15 @@ header
         color: $accent-color
 
     .header-logo
-      width: 120px // Further increase the logo size
+      width: 120px
       height: auto
-      margin-right: 15px // Increase space between the logo image and the text
+      margin-right: 15px
 
   nav
     margin: 0
     a
       display: inline-block
-      margin-left: 20px // Increase space between navigation items for balance
+      margin-left: 20px
       color: rgba(0,0,0,1)
       font:
         size: 22px
