Changes font to Inter

--- a/_sass/1-tools/_fonts.scss
+++ b/_sass/1-tools/_fonts.scss
@@ -1,18 +1,31 @@
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
+// Import Inter from Google Fonts
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+// Set up the base font styles
+body {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400; // Default weight
+  font-optical-sizing: auto;
+  line-height: 1.5;
+}
+
+// Additional styles for different font weights and usage
+.font-light {
   font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(//themes.googleusercontent.com/static/fonts/opensans/v8/DXI1ORHCpsQm3Vp6mXoaTaRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
 }
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
+
+.font-regular {
   font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(//themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
 }
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
+
+.font-bold {
   font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(//themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzKRDOzjiPcYnFooOUGCOsRk.woff) format('woff');
+}
+
+// Example class for custom use of variable font weights
+.inter-<uniquifier> {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>; // Replace <weight> with desired value from 100 to 900
+  font-style: normal;
 }
