--- a/_sass/1-tools/_fonts.scss
+++ b/_sass/1-tools/_fonts.scss
@@ -1,7 +1,5 @@
-// Import Inter from Google Fonts
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-// Set up the base font styles
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 400; // Default weight
@@ -23,9 +21,9 @@ body {
 }
 
 // Example class for custom use of variable font weights
-.inter-<uniquifier> {
+.inter-custom {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>; // Replace <weight> with desired value from 100 to 900
+  font-weight: 500; // Use an actual numeric value here
   font-style: normal;
 }
