Reduce footer font size

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
   <div class="footer-wrap">
     <div class="footer-tagline">
       <p>{{ site.data.settings.footer }}</p>
-      <p><strong>This website does not track or gather any personal data.</strong> 
-      I don't use analytics or tracking scripts. Your visit is completely private. 
-      Any minimal data collection, such as the total number of visits, is handled natively by GitHub Pages and is not under my control.
-      If you (dis)-liked anything you read, I would love your feedback even if it's just "Visited your website."</p>
+      <p><strong>This website does not track or gather any personal data.</strong>  <br>
+      I don't use analytics or tracking scripts. Your visit is completely private.  <br>
+      Any minimal data collection, such as the total number of visits, is handled natively by GitHub Pages and is not under my control. <br>
+      If you (dis)liked anything you saw, I'd love your feedback, even just "Visited your website."</p>
     </div>
     <div class="social-media">
       <nav>
