--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -2,8 +2,8 @@ header
   display: flex
   justify-content: space-between
   align-items: center
-  height: 120px // Adjusted height to maintain balance
-  padding: 10px 30px // Added top padding to create space between the logo and the top of the page
+  height: 140px // Keeping the same height
+  padding: 20px 40px // Keeping the same padding at the top and sides
 
   .logo
     display: flex
@@ -21,15 +21,16 @@ header
         color: $accent-color
 
     .header-logo
-      width: 120px
+      width: 150px
       height: auto
-      margin-right: 15px
+      margin-right: 20px // Space between logo and title
 
   nav
     margin: 0
+    padding-left: 40px // Adding left padding to create more space between the title and navigation menu
     a
       display: inline-block
-      margin-left: 20px
+      margin-left: 25px // Keeping the same space between navigation items
       color: rgba(0,0,0,1)
       font:
         size: 22px
@@ -41,16 +42,16 @@ header
   header
     flex-direction: column
     align-items: flex-start
-    padding: 10px 30px
+    padding: 15px 30px // Adjusted padding for smaller screens
 
     .logo
       margin: 0 0 10px 0
 
     nav
       margin: 0
+      padding-left: 0 // Reset padding for mobile view
       a
         margin-left: 0
         margin-right: 20px
         font:
           size: 16px
-  
